fixed overflow issue and worked on mob resp

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 /* basic styling */
@@ -44,6 +45,16 @@ h1 {
     font-size: 92px;
 }
 
+@media (max-width: 768px) {
+    h1 {
+       font-size: 30px;
+    }
+}
+
+section {
+    overflow: visible;
+}
+
 h2 {
     font-size: 32px;
 }
@@ -60,6 +71,12 @@ h3 {
 
 .text-large {
     font-size: 1.2rem;
+}
+
+@media (max-width: 768px) {
+    .text-large {
+       font-size: 0.8rem;
+    }
 }
 
 .text-bold {
@@ -82,9 +99,23 @@ main {
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    main {
+       padding: 0;
+    }
+}
+
  /* Navbar */
 .nav {
-    /* desktop fixed height */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background: var(--primarygradient);
+    border-radius: var(--nav-border-radius)
+}
+
+.nav-mobile {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -97,6 +128,12 @@ main {
     display: flex;
     align-items: center;
     gap: 1rem;
+}
+
+@media (max-width: 768px) {
+    .nav {
+        display: none;
+    }
 }
 
 .nav-item {
@@ -144,24 +181,36 @@ main {
     display: flex;
     justify-content: space-between;
     padding: 4rem;
-    
 }
+
+@media (max-width: 768px) {
+    .hero-container {
+        flex-direction: column;
+        padding: 1.5rem;
+        margin-top: 2rem;
+    }
+    .hero-left {
+        order: 1;
+    }
+}
+
 /* Relative position of hero-right to create new anchor for absolute positioned floating boxes */
 .hero-right {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     position: relative;
+    overflow: visible;
 }
 
 .floatingbox-large {
     position: absolute;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border-radius: var(--image-border-radius);
     background-color: var(--background-red);
     top: -1rem;
-    left: -2rem;
+    left: -1rem;
     animation: floating 3s ease-in-out alternate-reverse infinite;
 }
 
@@ -193,10 +242,23 @@ main {
     margin-top: 1rem;
 }
 
+@media (max-width: 768px) {
+    .maerkesager-container {
+       flex-direction: column;
+       padding: 1.5rem;
+    }
+}
+
 .maerkesager-column {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+
+@media (max-width: 768px) {
+    .maerkesager-column {
+       gap: 1rem;
+    }
 }
 
 /* Info card styles */
